--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
